<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_item_current_account"
            android:icon="@drawable/ic_current_account_black_24px"
            android:title="@string/current_account_title" />
        <item
            android:id="@+id/nav_menu_item_savings_account"
            android:icon="@drawable/ic_savings_account_black_24px"
            android:title="@string/savings_account_title" />
        <item
            android:id="@+id/nav_menu_item_credit_account"
            android:icon="@drawable/ic_credit_account_black_24px"
            android:title="@string/credit_account_title" />
    </group>
</menu>
